--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
 .App {
   text-align: center;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  background-color: blue;
+  z-index: auto;
+}
+
+.StreamCard {
+  text-align: center;
+  display: flex;
+  width: 30vw;
+  height: 50vh;
+  background-color: black;
+  margin: 10px;
+  z-index: 2;
+  color: white;
+}
+
+.Nav {
+  display: flex;
+  height: 13vh;
+  width: 100vw;
 }
 
 .App-logo {
