--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 .CardContainer {
   display: flex;
-  height: 87vh;
+  height: 100vh;
   width: 100vw;
   background-color: red;
   z-index: 1;
@@ -29,6 +29,7 @@
   display: flex;
   height: 13vh;
   width: 100vw;
+  justify-content: space-evenly;
 }
 
 .App-logo {
